tests/errors/user-level-constraint.expect
---CODE---
1
---STDERR---
error: user-level component cannot have ordering constraints over events
  ┌─ tests/errors/user-level-constraint.fil:3:6
  │
3 │ comp Main<G: L-(G), L: 1>(
  │      ^^^^ user-level component defines ordering between events: L > G+1

error: user-level component cannot have ordering constraints over events
  ┌─ tests/errors/user-level-constraint.fil:3:6
  │
3 │ comp Main<G: L-(G), L: 1>(
  │      ^^^^ user-level component defines ordering between events: G+5 > L

Compilation failed with 2 errors.
